--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "kalend": "^0.17.6",
     "moment": "^2.30.1",
     "next": "14.2.4",
     "react": "^18",
+    "react-datepicker": "^7.1.0",
     "react-dom": "^18",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "postcss": "^8",
